--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,5 +9,13 @@
         android:id="@+id/homeFragment"
         android:name="com.example.sensors.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_proximityFragment"
+            app:destination="@id/proximityFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/proximityFragment"
+        android:name="com.example.sensors.ProximityFragment"
+        android:label="ProximityFragment" />
 </navigation>
