ADD: accelerometer sensor and refactor on unecessary code in proximity sensor

--- a/app/src/main/res/layout/fragment_accelerometer.xml
+++ b/app/src/main/res/layout/fragment_accelerometer.xml
@@ -6,27 +6,36 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeFragment">
+        tools:context=".AccelerometerFragment">
 
-
-        <Button
-            android:id="@+id/buttonProximity"
+        <TextView
+            android:id="@+id/textViewXAxis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@string/buttonProximity"
+            android:layout_marginTop="100dp"
+            android:text="@string/placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonAccelerometer"
+        <TextView
+            android:id="@+id/textViewYAxis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/accelerometer"
+            android:layout_marginTop="32dp"
+            android:text="@string/placeholder"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonProximity" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewXAxis" />
+
+        <TextView
+            android:id="@+id/textViewZAxis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/placeholder"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewYAxis" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
