ADD: light sensor

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_accelerometerFragment"
             app:destination="@id/accelerometerFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_lightFragment"
+            app:destination="@id/lightFragment" />
     </fragment>
     <fragment
         android:id="@+id/proximityFragment"
@@ -25,4 +28,9 @@
         android:id="@+id/accelerometerFragment"
         android:name="com.example.sensors.AccelerometerFragment"
         android:label="AccelerometerFragment" />
+    <fragment
+        android:id="@+id/lightFragment"
+        android:name="com.example.sensors.LightFragment"
+        android:label="fragment_light"
+        tools:layout="@layout/fragment_light" />
 </navigation>
